# backend/server/src/routes/contact/mod.rs
@@ -1,9 +1,16 @@
-use axum::{Json, extract::State};
+use axum::{
+    Json,
+    extract::{Query, State},
+};
+use chdrms_database::asset::Asset;
 use utoipa_axum::{router::OpenApiRouter, routes};
 
 use crate::{
     config::ContactLink,
-    routes::contact::model::{ContactDetailsDto, ContactDetailsLinkDto},
+    error::{AppError, ErrorResponse, Result},
+    routes::contact::model::{
+        AssetIdentifier, ContactDetailsDto, ContactDetailsLinkDto, ContactParameters,
+    },
     state::AppState,
 };
 
@@ -17,20 +24,41 @@ pub(super) const TAG: &str = "contact";
     path = "/",
     tag = TAG,
     operation_id = "get_contact_details",
+    params(
+        ("asset", Query, description = "Referred asset ID or Tag."),
+    ),
     responses(
         (status = OK, description = "Success", body = ContactDetailsDto),
+        (status = FORBIDDEN, description = "Forbidden", body = ErrorResponse),
     ),
 )]
-async fn get_contact_details(State(state): State<AppState>) -> Json<ContactDetailsDto> {
+async fn get_contact_details(
+    State(state): State<AppState>,
+    Query(parameters): Query<ContactParameters>,
+) -> Result<Json<ContactDetailsDto>> {
+    use chdrms_database::asset as database;
+
+    if !Asset::asset_exists(
+        &mut state.transaction().await?,
+        &match parameters.asset {
+            AssetIdentifier::Id(id) => database::AssetIdentifier::Id(id),
+            AssetIdentifier::Tag(tag) => database::AssetIdentifier::Tag(tag),
+        },
+    )
+    .await?
+    {
+        return Err(AppError::forbidden("forbidden"));
+    }
+
     let details = state.config.contact_details;
-    Json(ContactDetailsDto {
+    Ok(Json(ContactDetailsDto {
         name: details.name,
         links: details
             .links
             .into_iter()
             .map(|ContactLink { label, link }| ContactDetailsLinkDto { label, link })
             .collect(),
-    })
+    }))
 }
 
 pub(super) fn routes() -> OpenApiRouter<AppState> {
