# backend/server/src/routes/contact/model.rs
@@ -1,6 +1,7 @@
-use serde::Serialize;
+use serde::{Deserialize, Serialize};
 use url::Url;
 use utoipa::ToSchema;
+use uuid::Uuid;
 
 #[derive(Serialize, ToSchema)]
 pub(super) struct ContactDetailsDto {
@@ -12,4 +13,16 @@ pub(super) struct ContactDetailsDto {
 pub(super) struct ContactDetailsLinkDto {
     pub label: Option<String>,
     pub link: Url,
+}
+
+#[derive(Deserialize)]
+pub(super) struct ContactParameters {
+    pub asset: AssetIdentifier,
+}
+
+#[derive(Deserialize)]
+#[serde(untagged)]
+pub(super) enum AssetIdentifier {
+    Id(Uuid),
+    Tag(String),
 }
